# cobrain

./: .eslintrc.js  .gitignore  .npmrc  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: release-desktop.yml  release-mobile.yml
apps/browser-extension/: README.md  background.js  content.css  content.js  manifest.json  popup.html  popup.js
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  tray.rs
apps/mobile/: .gitignore  app.json  babel.config.js  eas.json  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/: .env.example  next.config.js  package.json  tsconfig.json  vitest.config.ts
designs/: local-llm-mobile-design.md  mobile-design-system.md
docs/: AI_PROVIDER_SETTINGS.md  ARCHITECTURE.md  PRD.md  README.md
docs/competitive-analysis/: llm-abstraction-libraries.md  llm-provider-sdks.md  on-device-llm-mobile.md  publishing-systems.md
docs/prd/: browser-extension.md  calendar-integration.md  database-sync-architecture.md  desktop-app.md  dynamic-views.md  graph-visualization-ui.md  image-ocr.md  llm-provider-abstraction.md  local-llm-mobile.md  mobile-app.md  plugin-architecture.md  proactive-reminders.md  publishing-composer-system.md  static-view-snapshots.md  (+2 more)
licenses/: FSL-1.1.md
services/: README.md
test-reports/: local-llm-mobile-report.md
tests/: README.md  TEST_SUMMARY.md
(+162 files in other folders)
